$Id$

Search API 1.0, dev (xx/xx/xxxx):
------------------------------------
API changes:

Others:
- #1024514: Error when preprocessing muli-valued fulltext fields.
- #1020372: CSS classes for facets.

Search API 1.0, Beta 5 (01/05/2011):
------------------------------------
API changes:
- #917998: Enhance data alterations by making them objects.
- #991632: Incorporate newly available entity hooks.
- #963062: Make facets exportable.

Others:
- #1018544: includes/entity.inc mentioned in a few places.
- #1011458: Move entity and processor classes into individual files.
- #1012478: HTML in node bodies is escaped in Views.
- #1014548: Add newly required database fields for entities.
- #915174: Remove unnecessary files[] declarations from .info files.
- #988780: Merge of entity modules.
- #997852: Service config oddities.
- #994948: "Add index" results in blank page.
- #993470: Unnecessary warning when no valid keys or filters are given.
- #986412: Notice: Undefined index: value in theme_search_api_page_result().
- #987928: EntityDBExtendable::__sleep() is gone.
- #985324: Add "Current search" block.
- #984174: Bug in Index::prepareProcessors() when processors have not been set.

Search API 1.0, Beta 4 (11/29/2010):
------------------------------------
API changes:
- #976876: Move Solr module into its own project.
- #962582: Cross-entity searches (API addition).
- #939482 by fago: Fix exportables.
- #939092: Several API changes regarding service class methods.
- #939414: Enhanced service class descriptions. [soft API change]
- #939464: Documented Entity API's module and status properties.
- #939092: Changed private members to protected in all classes.
- #936360: Make servers and indexes exportable.

Others:
- #966512: "Time ago" option for Views date fields (+bug fix for missing value).
- #965318: Lots of notices if entities are missing in Views.
- #961210: Hide error messages.
- #963756: Array to string conversion error.
- #961276: Some random bugs.